create Get User Me endpoint
